Edited about page
Added Squirtle gif asset whaddup

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter: pygments
 # Site settings
 title: Sarah Eadie
 description: > # this means to ignore newlines until "email:"
-   Writer | Inspiration | Leader
+   Writer | Leader | Inspiration 
 
 email: eadiesn@gmail.com
 #blog logo
